@@ -1,6 +1,6 @@
 // TortoiseSVN - a Windows shell extension for easy version control
 
-// Copyright (C) 2003-2008 - TortoiseSVN
+// Copyright (C) 2003-2009 - TortoiseSVN
 
 // This program is free software; you can redistribute it and/or
 // modify it under the terms of the GNU General Public License
@@ -43,6 +43,8 @@ private:
 
 	bool EnsureCommandPipeOpen();
 	void CloseCommandPipe();
+
+	DWORD GetProcessIntegrityLevel();
 
 private:
 	HANDLE m_hPipe;
